test/testdata/classes/inheritance/read_write_property_overridden_by_subclass_read_only_property_assignment_error.lox
class Superclass {
  set property(_) {}

  get property() {}
}

class Subclass < Superclass {
  get property() {}
}

var subclass = Subclass();
subclass.property = 2; // error: property 'property' of 'Subclass' object is read-only
